fix scrolling when on mobile

--- a/style.css
+++ b/style.css
@@ -353,6 +353,11 @@ nav {
     background: white;
   }
 
+  .stop-scrolling {
+    height: 100%;
+    overflow-y: hidden;
+  }
+
   /* about section */
   .about-text div {
     padding: 3rem 3rem;
